Alteração nas imagens

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="#" class="btn">FAÇA SEU ORÇAMENTO</a>
       </div>
       <div class="hero-image">
-        <img src="images/FAZENDEIRO.png" alt="Homem com ferramentas" />
+        <img src="images/moraisgramas-logotippo.png" alt="Homem com ferramentas" />
       </div>
     </section>
   </main>
