Ajustando Responsividade - para conclusao02

--- a/index.html
+++ b/index.html
@@ -8,39 +8,41 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="css/style.css" />
   <title>Morais Gramas</title>
 </head>
 
 <body>
 
-  <header>
-    <div class="container">
-      <div class="logo">
+  <header data-aos="fade-down">
+    <div  class="container">
+      <div data-aos="fade-down" class="logo">
         <img src="images/logo 1.png" alt="Morais Gramas" />
         <span>Morais Gramas</span>
       </div>
-      <nav>
+      <nav data-aos="fade-down">
         <a href="#">Início</a>
         <a href="#sobre">Quem Somos?</a>
         <a href="#nosssaGramas">Nossas Gramas</a>
         <a href="#contato">Contato</a>
       </nav>
       <div>
-        <div class="botaoContato">
+        <div data-aos="fade-down" class="botaoContato">
           <a href="https://wa.me/+5515997660890" target="_blank"><button>CONTATO</button></a>
         </div>
       </div>
   </header>
 
   <main>
-    <section id="sobre" class="hero">
-      <div class="hero-text">
+    <section   id="sobre" class="hero">
+      <div  data-aos="fade-right" class="hero-text">
         <h1>A grama que o <strong>Brasil</strong> confia</h1>
         <p>Especialistas em produção e venda de<br>gramas de alta qualidade.</p>
         <a href="https://wa.me/+5515997660890" target="_blank" class="btn">FAÇA SEU ORÇAMENTO</a>
       </div>
-      <div class="hero-image">
+      <div  data-aos="fade-left" class="hero-image">
         <img src="images/logomelhorada.png" alt="Homem com ferramentas" />
       </div>
     </section>
@@ -48,11 +50,11 @@
   <section class="page" style="background-color: white;">
     <section class="sobre-nos">
       <div class="content-sobre">
-        <div class="left">
+        <div data-aos="fade-right" class="left">
           <img src="images/sobre1.jpeg" alt="Homem cortando grama" />
         </div>
 
-        <div class="right">
+        <div  data-aos="fade-down" class="right">
           <h2>Cultivando qualidade,<br>entregando confiança em cada <br> metro de grama.</h2>
           <p>
             Na nossa grameira, o compromisso com a qualidade começa na raiz.<br>
@@ -65,7 +67,7 @@
 
       <section class="confiar">
         <div class="confiar-container">
-          <div class="confiar-texto">
+          <div data-aos="fade-right" class="confiar-texto">
             <h2>Porque confiar na Morais Gramas?</h2>
             <p>
               Com anos de experiência no mercado, investimos em técnicas modernas de cultivo,
@@ -94,14 +96,14 @@
             </div>
           </div>
 
-          <div class="confiar-imagem">
+          <div  data-aos="fade-left" class="confiar-imagem">
             <img src="images/sobre2.jpeg" alt="Pessoa limpando campo de grama" />
           </div>
         </div>
       </section>
       <section class="secao-grama">
         <div class="conteudo-grama">
-          <div class="galeria-grama">
+          <div  data-aos="fade-down"class="galeria-grama">
             <img src="images/img1.jpeg" alt="Equipe descarregando grama">
             <img src="images/img2.jpeg" alt="Caminhão com logo Verde Gramados">
             <img src="images/img3.jpeg" alt="Campo com grama empilhada">
@@ -109,7 +111,7 @@
             <img src="images/img5.jpeg" alt="Paletes de grama empilhados">
           </div>
 
-          <div class="texto-grama">
+          <div data-aos="fade-down" class="texto-grama">
             <h2>Entrega Rápida e Eficiente</h2>
             <p>
               Realizamos a colheita e entrega da grama com agilidade e comprometimento,
@@ -132,14 +134,14 @@
     </section>
     <section class="gramasTipo">
       <div class="gramas">
-        <div class="nossasGramas">
+        <div data-aos="fade-down"class="nossasGramas">
           <h1>Nossas Gramas</h1>
         </div>
 
       </div>
     </section>
     <section id="nosssaGramas" class="carousel">
-      <div class="cards">
+      <div data-aos="fade-up" class="cards">
         <div class="card">
           <img src="images/ESMERALDA.png" alt="Grama Esmeralda">
           <h3>Grama Esmeralda</h3>
@@ -162,8 +164,8 @@
 
 
     <div id="contato" class="containerContato">
-      <form action="https://formsubmit.co/courtagencia@gmail.com" method="POST" class="form-section">
-     
+      <form data-aos="fade-right" action="https://formsubmit.co/courtagencia@gmail.com" method="POST" class="form-section">
+
         <h2>ENTRE EM CONTATO</h2>
         <div class="form-group">
           <label for="nome">NOME</label>
@@ -187,12 +189,12 @@
         <button type="submit" class="submit-button" id="whatsappBtn">ENVIAR</button>
         <input type="hidden" name="_next" value="http://127.0.0.1:5500/#contato">
       </form>
-      <div class="image-section">
+      <div data-aos="fade-left" class="image-section">
         <img src="images/ENTRE-EM-CONTATO.png" alt="">
       </div>
     </div>
-    <h2 class="feed">FEEKBACKS DOS CLIENTES</h2>
-    <section class="feedback">
+    <h2 data-aos="fade-up" class="feed">FEEKBACKS DOS CLIENTES</h2>
+    <section data-aos="fade-down" class="feedback">
       <div class="feedback-container">
         <div class="feedback-card">
           <div class="feedback-header">
@@ -222,29 +224,29 @@
         </div>
 
     </section>
-    <div class="faq-container">
-      <h2>PERGUNTAS FREQUENTES</h2>
+    <div  class="faq-container">
+      <h2 data-aos="fade-up">PERGUNTAS FREQUENTES</h2>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question">Quais tipos de grama vocês vendem?</div>
         <div class="answer hidden">Grama Esmeralda, Grama Batatais Grama São Carlos
 
         </div>
       </div>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question"> Qual é a melhor grama para áreas com muito sol?</div>
         <div class="answer hidden">A Grama Batatais e a Grama Esmeralda são excelentes para locais com alta exposição
           solar. Ambas são resistentes e de fácil manutenção.</div>
       </div>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question"> Qual grama é mais indicada para áreas com sombra?</div>
         <div class="answer hidden">A Grama São Carlos é a mais recomendada para áreas sombreadas ou com meia-sombra,
           pois se adapta melhor a locais com pouca luz direta.</div>
       </div>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question"> Qual grama tem melhor custo-benefício?</div>
         <div class="answer hidden">A Grama Batatais costuma ser a opção mais econômica, ideal para grandes áreas,
           taludes e espaços que precisam de cobertura vegetal funcional.
@@ -252,13 +254,13 @@
         </div>
       </div>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question">Como posso comprar a grama de vocês?</div>
         <div class="answer hidden">Entre em contato pelo nosso WhatsApp, telefone ou Instagram. Também atendemos
           presencialmente, se preferir.</div>
       </div>
 
-      <div class="faq-item">
+      <div data-aos="fade-right" class="faq-item">
         <div class="question"> Vocês entregam?</div>
         <div class="answer hidden">Sim! Fazemos entregas com horário agendado para sua comodidade. O valor do frete
           varia conforme a localização e quantidade.</div>
@@ -266,9 +268,8 @@
     </div>
 
     <div class="footer">
-      © 2025 Todos os direitos reservados. Desenvolvidou pela <a
-        style="text-decoration: none; color: rgb(198, 224, 164)" href="https://courtsites.com.br/"><span
-          style=" font-size: 14px;">Court</span></a>
+      © 2025 Todos os direitos reservados. Desenvolvido pela <a style="text-decoration: none; color: rgb(198, 224, 164)"
+        href="https://courtsites.com.br/"><span style=" font-size: 14px;">Court</span></a>
     </div>
   </section>
   <script>
@@ -297,6 +298,12 @@
         answer.classList.toggle('hidden');
       });
     });
+    document.addEventListener("DOMContentLoaded", function () {
+            AOS.init({
+                duration: 800, // Tempo da animação
+                once: true, // Anima apenas uma vez
+            });
+        });
   </script>
 </body>
 
