Ajustes em Cards

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
 
     <div id="contato" class="containerContato">
-      <form data-aos="fade-right" action="https://formsubmit.co/courtagencia@gmail.com" method="POST" class="form-section">
+      <form data-aos="fade-right" method="POST" class="form-section">
 
         <h2>ENTRE EM CONTATO</h2>
         <div class="form-group">
@@ -187,7 +187,6 @@
           <textarea id="mensagem" name="mensagem"></textarea>
         </div>
         <button type="submit" class="submit-button" id="whatsappBtn">ENVIAR</button>
-        <input type="hidden" name="_next" value="http://127.0.0.1:5500/#contato">
       </form>
       <div data-aos="fade-left" class="image-section">
         <img src="images/ENTRE-EM-CONTATO.png" alt="">
