--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
     rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="css/style.css" />
+      <link rel="shortcut icon" href="images/logo 1 - Copia.png">
   <title>Morais Gramas</title>
 </head>
 
 <body>
 
   <header data-aos="fade-down">
-    <div  class="container">
+    <div class="container">
       <div data-aos="fade-down" class="logo">
         <img src="images/logo 1.png" alt="Morais Gramas" />
         <span>Morais Gramas</span>
@@ -36,13 +37,13 @@
   </header>
 
   <main>
-    <section   id="sobre" class="hero">
-      <div  data-aos="fade-right" class="hero-text">
+    <section id="sobre" class="hero">
+      <div data-aos="fade-right" class="hero-text">
         <h1>A grama que o <strong>Brasil</strong> confia</h1>
         <p>Especialistas em produção e venda de<br>gramas de alta qualidade.</p>
         <a href="https://wa.me/+5515997660890" target="_blank" class="btn">FAÇA SEU ORÇAMENTO</a>
       </div>
-      <div  data-aos="fade-left" class="hero-image">
+      <div data-aos="fade-left" class="hero-image">
         <img src="images/logomelhorada.png" alt="Homem com ferramentas" />
       </div>
     </section>
@@ -54,7 +55,7 @@
           <img src="images/sobre1.jpeg" alt="Homem cortando grama" />
         </div>
 
-        <div  data-aos="fade-down" class="right">
+        <div data-aos="fade-down" class="right">
           <h2>Cultivando qualidade,<br>entregando confiança em cada <br> metro de grama.</h2>
           <p>
             Na nossa grameira, o compromisso com a qualidade começa na raiz.<br>
@@ -96,14 +97,14 @@
             </div>
           </div>
 
-          <div  data-aos="fade-left" class="confiar-imagem">
+          <div data-aos="fade-left" class="confiar-imagem">
             <img src="images/sobre2.jpeg" alt="Pessoa limpando campo de grama" />
           </div>
         </div>
       </section>
       <section class="secao-grama">
         <div class="conteudo-grama">
-          <div  data-aos="fade-down"class="galeria-grama">
+          <div data-aos="fade-down" class="galeria-grama">
             <img src="images/img1.jpeg" alt="Equipe descarregando grama">
             <img src="images/img2.jpeg" alt="Caminhão com logo Verde Gramados">
             <img src="images/img3.jpeg" alt="Campo com grama empilhada">
@@ -134,7 +135,7 @@
     </section>
     <section class="gramasTipo">
       <div class="gramas">
-        <div data-aos="fade-down"class="nossasGramas">
+        <div data-aos="fade-down" class="nossasGramas">
           <h1>Nossas Gramas</h1>
         </div>
 
@@ -223,7 +224,7 @@
         </div>
 
     </section>
-    <div  class="faq-container">
+    <div class="faq-container">
       <h2 data-aos="fade-up">PERGUNTAS FREQUENTES</h2>
 
       <div data-aos="fade-right" class="faq-item">
@@ -298,11 +299,11 @@
       });
     });
     document.addEventListener("DOMContentLoaded", function () {
-            AOS.init({
-                duration: 800, // Tempo da animação
-                once: true, // Anima apenas uma vez
-            });
-        });
+      AOS.init({
+        duration: 800, // Tempo da animação
+        once: true, // Anima apenas uma vez
+      });
+    });
   </script>
 </body>
 
