Inplementação icone logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <link rel="stylesheet" href="css/style.css" />
-      <link rel="shortcut icon" href="images/logo 1 - Copia.png">
+  <link rel="shortcut icon" href="images/logo 1 - Copia.png">
+  <link rel="icon" href="images/logo 1 - Copia.png" type="image/png">
+  <meta property="og:image" content="https://www.moraisgramas.com.br/images/logo 1 - Copia.png" />
+  <meta property="og:title" content="Morais Gramas" />
+  <meta property="og:description" content="Venda de gramas Esmeralda, Batatais, São Carlos..." />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Morais Gramas",
+  "url": "https://moraisgramas.com.br",
+  "logo": "https://www.moraisgramas.com.br/images/logo 1 - Copia.png", 
+  "sameAs": [
+    "https://www.instagram.com/moraisgrama/"
+  ]
+}
+</script>
+
   <title>Morais Gramas</title>
 </head>
 
@@ -186,7 +204,7 @@
           <label for="mensagem">O QUE VOCÊ DESEJA?</label>
           <textarea id="mensagem" name="mensagem"></textarea>
         </div>
-        <button type="submit" class="submit-button" id="whatsappBtn" >ENVIAR</button>
+        <button type="submit" class="submit-button" id="whatsappBtn">ENVIAR</button>
       </form>
       <div data-aos="fade-left" class="image-section">
         <img src="images/ENTRE-EM-CONTATO.png" alt="">
