--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <link rel="icon" href="images/logo 1 - Copia.png" type="image/png">
   <meta property="og:image" content="https://www.moraisgramas.com.br/images/logo 1 - Copia.png" />
   <meta property="og:title" content="Morais Gramas" />
-  <meta property="og:description" content="Venda de gramas Esmeralda, Batatais, São Carlos..." />
+  <meta name="description"
+    content="A Morais Gramas é referência nacional na produção e venda de gramas como Esmeralda, Batatais e São Carlos. Qualidade, confiança e agilidade para seu projeto paisagístico ou jardim. Peça seu orçamento agora!">
 
-<script type="application/ld+json">
+  <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "Organization",
@@ -30,7 +31,8 @@
 }
 </script>
 
-  <title>Morais Gramas</title>
+  <title>Morais Gramas - A Melhor Grameira do Brasil em Grama Esmeralda, Batatais e São Carlos</title>
+
 </head>
 
 <body>
