--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
   ]
 }
 </script>
-
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
   <title>Morais Gramas - A Melhor Grameira do Brasil em Grama Esmeralda, Batatais e São Carlos</title>
 
 </head>
